fix: thumbnail now covers the whole div

--- a/src/styles/5-components/_c-project.scss
+++ b/src/styles/5-components/_c-project.scss
@@ -14,7 +14,7 @@
     margin-bottom: 40px;
     background-image: url('../../images/sample-project.png');
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     box-shadow: 0 5px 15px rgba($color-gray, 0.75);
 
